# joblib-parallelization-example

./: .gitignore  LICENSE  README.md  factorial.py  fashion.py  pyproject.toml
