[tool.poetry]
name = "joblib-parallelization-example"
version = "0.1.0"
description = "Example using Joblib for parallel programming"
authors = ["Sitt Guruvanich <aekazitt+github@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
joblib = "^1.1.0"
pandas = "^1.4.3"
httpx = "^0.23.0"
colorthief = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
